* #12840: gnome: fix bad compilation by changing order of libs

--- a/gnome/src/Makefile.am
+++ b/gnome/src/Makefile.am
@@ -2,26 +2,25 @@ include ../globals.mak
 
 bin_PROGRAMS = sflphone-client-gnome
 
-SFLPHONEGTK_LIBS=./contacts/libcontacts.la ./config/libconfig.la \
-                 ./dbus/libdbus.la ./widget/libwidget.la ./icons/libicons.la
+SFLPHONE_LIBS=./contacts/libcontacts.la ./config/libconfig.la \
+              ./dbus/libdbus.la ./widget/libwidget.la ./icons/libicons.la
 
 sflphone_client_gnome_SOURCES = main.c
 sflphone_client_gnome_CFLAGS = @DBUSGLIB_CFLAGS@ @LIBNOTIFY_CFLAGS@ \
                                @GTK_CFLAGS@ @WEBKIT_CFLAGS@ \
                                @GCONF_CFLAGS@ @JAVASCRIPT_CORE_GTK_CFLAGS@ \
                                @GTHREAD_CFLAGS@
-sflphone_client_gnome_LDADD = ./libsflphone_client.la $(SFLPHONEGTK_LIBS) $(LD_LIBS)
+sflphone_client_gnome_LDADD = $(SFLPHONE_LIBS) $(DL_LIBS) ./libsflphone_client.la
 
 SUBDIRS = config contacts dbus widget icons
 if SFL_VIDEO
 SUBDIRS += video
 endif
 
-NOFIFY_LIBS = -lnotify
-LD_LIBS = -ldl
+DL_LIBS = -ldl
 
 if SFL_VIDEO
-SFLPHONEGTK_LIBS+=./video/libvideo.la
+SFLPHONE_LIBS+=./video/libvideo.la
 endif
 
 noinst_LTLIBRARIES = libsflphone_client.la
@@ -67,9 +66,9 @@ libsflphone_client_la_SOURCES = \
   seekslider.h
 
 libsflphone_client_la_LDFLAGS = @DBUSGLIB_LIBS@ @LIBNOTIFY_LIBS@ \
-                                @NOTIFY_LIBS@ $(SFLPHONEGTK_LIBS) @X11_LIBS@ \
+                                $(SFLPHONE_LIBS) @X11_LIBS@ \
                                 @GTK_LIBS@ @GLIB_LIBS@ @WEBKIT_LIBS@ \
-                                $(LD_LIBS) @GCONF_LIBS@ \
+                                $(DL_LIBS) @GCONF_LIBS@ \
                                 @JAVASCRIPT_CORE_GTK_LIBS@ @GTHREAD_LIBS@
 
 libsflphone_client_la_CFLAGS = @DBUSGLIB_CFLAGS@ @LIBNOTIFY_CFLAGS@ \
