--- a/gnome/tests/Makefile.am
+++ b/gnome/tests/Makefile.am
@@ -34,3 +34,6 @@ check_dbus_LDADD = $(SFLPHONE_LIBS) @CHECK_LIBS@ @GCONF_LIBS@ \
                    $(top_builddir)/src/widget/libwidget.la \
                    $(top_builddir)/src/icons/libicons.la @X11_LIBS@ \
                    @JAVASCRIPT_CORE_GTK_LIBS@ -ldl
+
+clean-local:
+	rm -rf *.xml
