--- a/gnome/src/Makefile.am
+++ b/gnome/src/Makefile.am
@@ -1,11 +1,12 @@
 include ../globals.mak
 
-SUBDIRS = config contacts dbus widget icons video
+SUBDIRS = config contacts dbus widget icons video messaging
 
 bin_PROGRAMS = sflphone-client-gnome
 
 SFLPHONE_LIBS=./contacts/libcontacts.la ./config/libconfig.la \
-              ./dbus/libdbus.la ./widget/libwidget.la ./icons/libicons.la
+              ./dbus/libdbus.la ./widget/libwidget.la ./icons/libicons.la \
+              ./messaging/libmessaging.la
 
 DL_LIBS = -ldl
 
@@ -56,16 +57,16 @@ libsflphone_client_la_SOURCES = \
   seekslider.h \
   account_schema.h
 
-libsflphone_client_la_LIBADD = $(SFLPHONE_LIBS)
-libsflphone_client_la_LDFLAGS = @DBUSGLIB_LIBS@ @LIBNOTIFY_LIBS@ \
+libsflphone_client_la_LIBADD = @CLUTTER_LIBS@ @CLUTTERGTK_LIBS@ $(SFLPHONE_LIBS)
+libsflphone_client_la_LDFLAGS = @CLUTTER_LDFLAGS@ @DBUSGLIB_LIBS@ @LIBNOTIFY_LIBS@ \
                                 @X11_LIBS@ @GTK_LIBS@ @GLIB_LIBS@ @WEBKIT_LIBS@ \
                                 $(DL_LIBS) @GCONF_LIBS@ @JAVASCRIPT_CORE_GTK_LIBS@ \
-                                @GTHREAD_LIBS@
+                                @GTHREAD_LIBS@ @CLUTTERGTK_LDFLAGS@
 
-libsflphone_client_la_CFLAGS = @DBUSGLIB_CFLAGS@ @LIBNOTIFY_CFLAGS@ \
+libsflphone_client_la_CFLAGS = @CLUTTER_CFLAGS@ @DBUSGLIB_CFLAGS@ @LIBNOTIFY_CFLAGS@ \
                                @GTK_CFLAGS@ @WEBKIT_CFLAGS@ \
                                @GCONF_CFLAGS@ @JAVASCRIPT_CORE_GTK_CFLAGS@ \
-                               @GTHREAD_CFLAGS@
+                               @GTHREAD_CFLAGS@ @CLUTTERGTK_CFLAGS@
 
 
 sflphone_client_gnome_SOURCES = main.c
