* #13382: daemon: videoCodecs are now a list of hashtables

--- a/daemon/test/sflphoned-sample.yml
+++ b/daemon/test/sflphoned-sample.yml
@@ -93,6 +93,13 @@ accounts:
   type: SIP
   updateContact: false
   username:
+  videoCodecs:
+  - bitrate: 400
+    enabled: true
+    name: H263-2000
+  - bitrate: 400
+    enabled: true
+    name: H264
   zrtp:
     displaySas: true
     displaySasOnce: false
