[ #13500 ] Partially remove webkit (3/3)

--- a/gnome/src/contacts/Makefile.am
+++ b/gnome/src/contacts/Makefile.am
@@ -20,9 +20,9 @@ libcontacts_la_SOURCES = \
   searchbar.h
 
 libcontacts_la_LIBS = $(DBUSGLIB_LIBS) $(LIBNOTIFY_LIBS) \
-                      $(GTK_LIBS) $(GLIB_LIBS) $(WEBKIT_LIBS) \
+                      $(GTK_LIBS) $(GLIB_LIBS) \
                       $(GCONF_LDFLAGS) -ldl
 
 libcontacts_la_CFLAGS = $(DBUSGLIB_CFLAGS) $(LIBNOTIFY_CFLAGS) \
-                        $(GTK_CFLAGS) $(GLIB_CFLAGS) $(WEBKIT_CFLAGS) \
+                        $(GTK_CFLAGS) $(GLIB_CFLAGS) \
                         $(GCONF_CFLAGS)
