--- a/gnome/src/config/Makefile.am
+++ b/gnome/src/config/Makefile.am
@@ -37,7 +37,7 @@ SFL_VIDEO_LDFLAGS=@CLUTTER_LIBS@ @CLUTTERGTK_LIBS@
 endif
 
 libconfig_la_LDFLAGS = $(DBUSGLIB_LDFLAGS) $(LIBNOTIFY_LDFLAGS) $(GCONF_LDFLAGS) \
-					   $(GTK_LDFLAGS) $(GLIB_LDFLAGS) $(WEBKIT_LDFLAGS) \
+					   $(GTK_LDFLAGS) $(GLIB_LDFLAGS) \
 					   $(SFL_VIDEO_LDFLAGS) 
 
 if SFL_VIDEO
@@ -45,12 +45,12 @@ SFL_VIDEO_LIBADD=@CLUTTER_LIBS@ @CLUTTERGTK_LIBS@
 endif
 
 libconfig_la_LIBADD = $(DBUSGLIB_LIBS) $(LIBNOTIFY_LIBS) $(GCONF_LIBS) \
-					  $(GTK_LIBS) $(GLIB_LIBS) $(WEBKIT_LIBS) $(SFL_VIDEO_LIBADD)
+					  $(GTK_LIBS) $(GLIB_LIBS) $(SFL_VIDEO_LIBADD)
 
 if SFL_VIDEO
 SFL_VIDEO_CFLAGS=@CLUTTER_CFLAGS@ @CLUTTERGTK_CFLAGS@
 endif
 
 libconfig_la_CFLAGS = $(DBUSGLIB_CFLAGS) $(LIBNOTIFY_CFLAGS) $(GCONF_CFLAGS) \
-					  $(GTK_CFLAGS) $(GLIB_CFLAGS) $(WEBKIT_CFLAGS) \
+					  $(GTK_CFLAGS) $(GLIB_CFLAGS) \
 					  $(SFL_VIDEO_CFLAGS)
