--- a/gnome/src/dbus/Makefile.am
+++ b/gnome/src/dbus/Makefile.am
@@ -32,11 +32,11 @@ libdbus_la_SOURCES=     \
     $(BUILT_SOURCES)
 
 libdbus_la_LDFLAGS= $(DBUSGLIB_LDFLAGS) $(LIBNOTIFY_LDFLAGS) \
-					$(GTK_LDFLAGS) $(GLIB_LDFLAGS) $(WEBKIT_LDFLAGS) \
+					$(GTK_LDFLAGS) $(GLIB_LDFLAGS) \
 					$(GCONF_LDFLAGS)
 
 libdbus_la_CFLAGS= $(DBUSGLIB_CFLAGS) $(LIBNOTIFY_CFLAGS) \
-				   $(GTK_CFLAGS) $(GLIB_CFLAGS) $(WEBKIT_CFLAGS) \
+				   $(GTK_CFLAGS) $(GLIB_CFLAGS) \
 				   $(GCONF_CFLAGS)
 
 EXTRA_DIST= marshaller.list
