#13726: Makes sdes an optional feature at build time for sflphone daemon

--- a/daemon/configure.ac
+++ b/daemon/configure.ac
@@ -190,7 +190,17 @@ AM_CONDITIONAL(BUILD_INSTANT_MESSAGING, test "x$with_instant_messaging" = "xyes"
 
 AX_PTHREAD
 
-# AX_PATH_LIB_PCRE
+AC_ARG_WITH([sdes],
+	[ AS_HELP_STRING([--without-sdes], [disable support for sdes key exchange]) ],
+	[],
+	[with_sdes=yes])
+
+AS_IF([test "x$with_sdes" = "xyes"], [
+	AX_PATH_LIB_PCRE
+        ]);
+
+AC_DEFINE_UNQUOTED([HAVE_SDES], `if test "x$with_sdes" = "xyes"; then echo 1; else echo 0; fi`, [Define if you have sdes support])
+AM_CONDITIONAL(BUILD_SDES, test "x$with_sdes" = "xyes" )
 
 dnl Check for libcppunit-dev
 CPPUNIT_MIN_VERSION=1.12
