--- a/daemon/test/Makefile.am
+++ b/daemon/test/Makefile.am
@@ -24,8 +24,6 @@ test_SOURCES = constants.h \
 			   historytest.cpp \
 			   numbercleanertest.h \
 			   numbercleanertest.cpp \
-			   sdesnegotiatortest.h \
-			   sdesnegotiatortest.cpp \
 			   siptest.h \
 			   siptest.cpp \
 			   sdptest.h \
@@ -38,6 +36,11 @@ test_SOURCES = constants.h \
 			   mainbuffertest.cpp \
 			   resamplertest.h \
 			   resamplertest.cpp
+
+if BUILD_SDES
+test_SOURCES+=sdesnegotiatortest.h \
+		sdesnegotiatortest.cpp
+endif
 
 if BUILD_INSTANT_MESSAGING
 test_SOURCES+=instantmessagingtest.h \
