--- a/daemon/src/audio/audiortp/Makefile.am
+++ b/daemon/src/audio/audiortp/Makefile.am
@@ -2,19 +2,19 @@ include $(top_srcdir)/globals.mak
 
 noinst_LTLIBRARIES = libaudiortp.la
 
+if BUILD_ZRTP
+SFL_ZRTP_SRC=audio_zrtp_session.h audio_zrtp_session.cpp zrtp_session_callback.cpp zrtp_session_callback.h
+endif
+
 libaudiortp_la_SOURCES = \
+		$(SFL_ZRTP_SRC) \
 		audio_rtp_session.cpp \
 		audio_symmetric_rtp_session.cpp \
 		audio_rtp_record_handler.cpp \
 		audio_rtp_factory.cpp \
-		audio_zrtp_session.cpp \
-		zrtp_session_callback.cpp \
 		audio_srtp_session.cpp \
 		audio_rtp_session.h \
 		audio_rtp_record_handler.h \
 		audio_rtp_factory.h \
 		audio_symmetric_rtp_session.h \
-		audio_zrtp_session.h \
-		zrtp_session_callback.h \
 		audio_srtp_session.h
-
