* #13987: build sflphone for ubuntu 12.10 (quantal)

--- a/tools/build-system/launchpad/dput.conf
+++ b/tools/build-system/launchpad/dput.conf
@@ -19,6 +19,13 @@ incoming = ~savoirfairelinux/ubuntu/precise
 login = anonymous
 allow_unsigned_uploads = 0
 
+[sflphone-quantal]
+fqdn = ppa.launchpad.net
+method = ftp
+incoming = ~savoirfairelinux/ubuntu/quantal
+login = anonymous
+allow_unsigned_uploads = 0
+
 [sflphone-nightly-natty]
 fqdn = ppa.launchpad.net
 method = ftp
@@ -37,5 +44,12 @@ allow_unsigned_uploads = 0
 fqdn = ppa.launchpad.net
 method = ftp
 incoming = ~savoirfairelinux/sflphone-nightly/ubuntu/precise
+login = anonymous
+allow_unsigned_uploads = 0
+
+[sflphone-nightly-quantal]
+fqdn = ppa.launchpad.net
+method = ftp
+incoming = ~savoirfairelinux/sflphone-nightly/ubuntu/quantal
 login = anonymous
 allow_unsigned_uploads = 0
