[#13281] Add launchpad testing repo for KDE packages

--- a/tools/build-system/launchpad/dput.conf
+++ b/tools/build-system/launchpad/dput.conf
@@ -39,3 +39,10 @@ method = ftp
 incoming = ~savoirfairelinux/sflphone-nightly/ubuntu/precise
 login = anonymous
 allow_unsigned_uploads = 0
+
+[sflphone-testing-precise]
+fqdn = ppa.launchpad.net
+method = ftp
+incoming = ~savoirfairelinux/sflphone-testing/ubuntu/precise
+login = anonymous
+allow_unsigned_uploads = 0
