--- a/tools/build-system/launchpad/sflphone-client-kde/debian/control
+++ b/tools/build-system/launchpad/sflphone-client-kde/debian/control
@@ -3,7 +3,7 @@ Section: kde
 Priority: optional
 Maintainer: Emmanuel Lepage Vallee <emmanuel.lepage@savoirfairelinux.com>
 Uploaders: Emmanuel Lepage Vallee <emmanuel.lepage@savoirfairelinux.com>
-Build-Depends: debhelper (>= 5.0), cdbs, kdelibs5-dev, cmake, kdepimlibs5-dev,
+Build-Depends: debhelper (>= 5.0), cdbs, kdelibs5-dev, cmake, kdepimlibs5-dev, libboost-dev,
 Homepage: http://www.sfphone.org/
 
 Package: sflphone-client-kde
