--- a/tools/build-system/launchpad/dput.conf
+++ b/tools/build-system/launchpad/dput.conf
@@ -54,6 +54,20 @@ incoming = ~savoirfairelinux/sflphone-testing/ubuntu/precise
 login = anonymous
 allow_unsigned_uploads = 0
 
+[sflphone-testing-quantal]
+fqdn = ppa.launchpad.net
+method = ftp
+incoming = ~savoirfairelinux/sflphone-testing/ubuntu/quantal
+login = anonymous
+allow_unsigned_uploads = 0
+
+[sflphone-testing-oneiric]
+fqdn = ppa.launchpad.net
+method = ftp
+incoming = ~savoirfairelinux/sflphone-testing/ubuntu/oneiric
+login = anonymous
+allow_unsigned_uploads = 0
+
 [sflphone-nightly-quantal]
 fqdn = ppa.launchpad.net
 method = ftp
