--- a/tools/build-system/launchpad/sflphone-client-kde/debian/control
+++ b/tools/build-system/launchpad/sflphone-client-kde/debian/control
@@ -1,8 +1,7 @@
 Source: sflphone-client-kde
 Section: kde
 Priority: optional
-Maintainer: Emmanuel Lepage Vallee <emmanuel.lepage@savoirfairelinux.com>
-Uploaders: Emmanuel Lepage Vallee <emmanuel.lepage@savoirfairelinux.com>
+Maintainer: Emmanuel Milou <emmanuel.milou@savoirfairelinux.com>
 Build-Depends: debhelper (>= 5.0), cdbs, kdelibs5-dev, cmake, kdepimlibs5-dev, libboost-dev,
 Homepage: http://www.sfphone.org/
 
