* #14176: sip/video: register video threads with pjsip before calling its functions

--- a/daemon/src/sip/Makefile.am
+++ b/daemon/src/sip/Makefile.am
@@ -14,7 +14,9 @@ libsiplink_la_SOURCES = \
 		sipvoiplink.h \
 		siptransport.h \
 		sip_utils.cpp \
-		sip_utils.h
+		sip_utils.h \
+		sip_thread_client.h \
+		sip_thread_client.cpp
 
 if BUILD_SDES
 libsiplink_la_SOURCES+= sdes_negotiator.cpp \
