* #14267: addressbook: fix gcc warnings

--- a/plugins/configure.ac
+++ b/plugins/configure.ac
@@ -23,7 +23,7 @@ AC_PROG_INSTALL
 AC_HEADER_STDC
 LT_INIT
 
-MIGRATION_FLAGS="-DGDK_DISABLE_DEPRECATED -DGTK_DISABLE_DEPRECATED -DGTK_DISABLE_SINGLE_INCLUDES"
+MIGRATION_FLAGS="-DE_BOOK_DISABLE_DEPRECATED -DGDK_DISABLE_DEPRECATED -DGTK_DISABLE_DEPRECATED -DGTK_DISABLE_SINGLE_INCLUDES"
 if test "x$with_debug" = "xfull" -o "x$with_debug" = "xyes"; then
     CFLAGS="-g -O0 -DDEBUG -Wall -Wextra $MIGRATION_FLAGS"
 else
