#14379: Fix undefined AudioLayer::PCMType

--- a/daemon/src/audio/Makefile.am
+++ b/daemon/src/audio/Makefile.am
@@ -48,7 +48,6 @@ noinst_HEADERS = \
 libaudio_la_LIBADD = \
 	./audiortp/libaudiortp.la \
 	./codecs/libcodecdescriptor.la \
-	./alsa/libalsalayer.la \
 	./sound/libsound.la
 
 if BUILD_PULSE
@@ -56,5 +55,5 @@ libaudio_la_LIBADD += ./pulseaudio/libpulselayer.la
 endif
 
 if BUILD_ALSA
-libaudio_la_LIBADD += ./alsaaudio/libaudiolayer.la
+libaudio_la_LIBADD += ./alsa/libalsalayer.la
 endif
