* #14727: video: video receive thread should not call pjsip or touch the callmap
Also, even if tryEnterMutex returns false, we must call leaveMutex.
This was leading to a dead lock when hanging up and answering a call at
the same time.

--- a/daemon/src/sip/Makefile.am
+++ b/daemon/src/sip/Makefile.am
@@ -14,9 +14,7 @@ libsiplink_la_SOURCES = \
 		sipvoiplink.h \
 		siptransport.h \
 		sip_utils.cpp \
-		sip_utils.h \
-		sip_thread_client.h \
-		sip_thread_client.cpp
+		sip_utils.h
 
 if BUILD_SDES
 libsiplink_la_SOURCES+= sdes_negotiator.cpp \
