* #11581: gnome: migrate from gconf to gsettings
Presently This won't work if the client is not installed, unless you manually
compile the schema file and put it in some directory containing
glib-2.0/schemas/, then set XDG_DATA_DIRS to include this directory
as well as /usr/share and /usr/local/share.

--- a/gnome/Makefile.am
+++ b/gnome/Makefile.am
@@ -4,22 +4,25 @@ CFLAGS=-Wall -Werror -Wextra
 
 ACLOCAL_AMFLAGS = -I m4
 
-GCONFTOOL=gconftool-2
-
 GNOME_DOC=gnome-doc-utils.make
 
 uidir=$(datadir)/sflphone/ui
 ui_DATA=src/ui.xml
 
-schemadir   = @GCONF_SCHEMA_FILE_DIR@
-schema_DATA = sflphone-client-gnome.schemas
+@INTLTOOL_XML_NOMERGE_RULE@
+gsettings_in_file = data/org.sflphone.SFLphone.gschema.xml.in
+gsettings_SCHEMAS = $(gsettings_in_file:.xml.in=.xml)
+@GSETTINGS_RULES@
 
-EXTRA_DIST  = sflphone.desktop.in $(GNOME_DOC) m4 $(ui_DATA) $(schema_DATA) $(apps_DATA)
+dist_noinst_DATA = $(gsettings_in_file)
+
+EXTRA_DIST  = sflphone.desktop.in $(GNOME_DOC) m4 $(ui_DATA) $(apps_DATA)
 appsdir = $(datadir)/applications
 apps_in_files = sflphone.desktop.in
 apps_DATA = $(apps_in_files:.desktop.in=.desktop)
 
-DISTCLEANFILES= sflphone.desktop $(GNOME_DOC)
+CLEANFILES = $(gsettings_SCHEMAS)
 
-install-data-local:
-	GCONF_CONFIG_SOURCE=$(GCONF_SCHEMA_CONFIG_SOURCE) $(GCONFTOOL) --makefile-install-rule $(top_srcdir)/$(schema_DATA)
+MAINTAINERCLEANFILES = $(gsettings_SCHEMAS:.xml=.valid)
+
+DISTCLEANFILES= sflphone.desktop $(GNOME_DOC)
