--- a/gnome/src/Makefile.am
+++ b/gnome/src/Makefile.am
@@ -29,7 +29,6 @@ libsflphone_client_la_SOURCES = \
   sliders.c \
   statusicon.c \
   codeclist.c \
-  eel-gconf-extensions.c \
   shortcuts.c \
   str_utils.c \
   seekslider.c \
@@ -47,7 +46,6 @@ libsflphone_client_la_SOURCES = \
   callable_obj.h \
   conference_obj.h \
   shortcuts.h \
-  eel-gconf-extensions.h \
   logger.h \
   unused.h \
   str_utils.h \
@@ -61,19 +59,19 @@ libsflphone_client_la_SOURCES = \
 libsflphone_client_la_LIBADD = @CLUTTER_LIBS@ @CLUTTERGTK_LIBS@ $(SFLPHONE_LIBS)
 libsflphone_client_la_LDFLAGS = @CLUTTER_LDFLAGS@ @DBUSGLIB_LIBS@ @LIBNOTIFY_LIBS@ \
                                 @X11_LIBS@ @GTK_LIBS@ @GLIB_LIBS@ \
-                                $(DL_LIBS) @GCONF_LIBS@ @JAVASCRIPT_CORE_GTK_LIBS@ \
+                                $(DL_LIBS) @JAVASCRIPT_CORE_GTK_LIBS@ \
                                 @GTHREAD_LIBS@ @CLUTTERGTK_LDFLAGS@
 
 libsflphone_client_la_CFLAGS = @CLUTTER_CFLAGS@ @DBUSGLIB_CFLAGS@ @LIBNOTIFY_CFLAGS@ \
                                @GTK_CFLAGS@ \
-                               @GCONF_CFLAGS@ @JAVASCRIPT_CORE_GTK_CFLAGS@ \
+                               @JAVASCRIPT_CORE_GTK_CFLAGS@ \
                                @GTHREAD_CFLAGS@ @CLUTTERGTK_CFLAGS@
 
 
 sflphone_client_gnome_SOURCES = main.c
 sflphone_client_gnome_CFLAGS = @DBUSGLIB_CFLAGS@ @LIBNOTIFY_CFLAGS@ \
                                @GTK_CFLAGS@ \
-                               @GCONF_CFLAGS@ @JAVASCRIPT_CORE_GTK_CFLAGS@ \
+                               @JAVASCRIPT_CORE_GTK_CFLAGS@ \
                                @GTHREAD_CFLAGS@
 sflphone_client_gnome_LDADD = libsflphone_client.la
 
