--- a/gnome/src/config/Makefile.am
+++ b/gnome/src/config/Makefile.am
@@ -36,7 +36,7 @@ if SFL_VIDEO
 SFL_VIDEO_LDFLAGS=@CLUTTER_LIBS@ @CLUTTERGTK_LIBS@
 endif
 
-libconfig_la_LDFLAGS = $(DBUSGLIB_LDFLAGS) $(LIBNOTIFY_LDFLAGS) $(GCONF_LDFLAGS) \
+libconfig_la_LDFLAGS = $(DBUSGLIB_LDFLAGS) $(LIBNOTIFY_LDFLAGS) \
 					   $(GTK_LDFLAGS) $(GLIB_LDFLAGS) \
 					   $(SFL_VIDEO_LDFLAGS) 
 
@@ -44,13 +44,13 @@ if SFL_VIDEO
 SFL_VIDEO_LIBADD=@CLUTTER_LIBS@ @CLUTTERGTK_LIBS@
 endif
 
-libconfig_la_LIBADD = $(DBUSGLIB_LIBS) $(LIBNOTIFY_LIBS) $(GCONF_LIBS) \
+libconfig_la_LIBADD = $(DBUSGLIB_LIBS) $(LIBNOTIFY_LIBS) \
 					  $(GTK_LIBS) $(GLIB_LIBS) $(SFL_VIDEO_LIBADD)
 
 if SFL_VIDEO
 SFL_VIDEO_CFLAGS=@CLUTTER_CFLAGS@ @CLUTTERGTK_CFLAGS@
 endif
 
-libconfig_la_CFLAGS = $(DBUSGLIB_CFLAGS) $(LIBNOTIFY_CFLAGS) $(GCONF_CFLAGS) \
+libconfig_la_CFLAGS = $(DBUSGLIB_CFLAGS) $(LIBNOTIFY_CFLAGS) \
 					  $(GTK_CFLAGS) $(GLIB_CFLAGS) \
 					  $(SFL_VIDEO_CFLAGS)
