--- a/gnome/Makefile.am
+++ b/gnome/Makefile.am
@@ -1,4 +1,4 @@
-SUBDIRS = src pixmaps tests man po doc
+SUBDIRS = src pixmaps tests man po doc data
 
 CFLAGS=-Wall -Werror -Wextra
 
@@ -9,20 +9,11 @@ GNOME_DOC=gnome-doc-utils.make
 uidir=$(datadir)/sflphone/ui
 ui_DATA=src/ui.xml
 
-@INTLTOOL_XML_NOMERGE_RULE@
-gsettings_in_file = data/org.sflphone.SFLphone.gschema.xml.in
-gsettings_SCHEMAS = $(gsettings_in_file:.xml.in=.xml)
-@GSETTINGS_RULES@
-
 dist_noinst_DATA = $(gsettings_in_file)
 
 EXTRA_DIST  = sflphone.desktop.in $(GNOME_DOC) m4 $(ui_DATA) $(apps_DATA)
 appsdir = $(datadir)/applications
 apps_in_files = sflphone.desktop.in
 apps_DATA = $(apps_in_files:.desktop.in=.desktop)
-
-CLEANFILES = $(gsettings_SCHEMAS)
-
-MAINTAINERCLEANFILES = $(gsettings_SCHEMAS:.xml=.valid)
 
 DISTCLEANFILES= sflphone.desktop $(GNOME_DOC)
