* #17183: plugins: fix configure for newer autotools

--- a/plugins/configure.ac
+++ b/plugins/configure.ac
@@ -1,6 +1,7 @@
 AC_INIT([sflphone],[1.2.0],[sflphoneteam@savoirfairelinux.com],[sflphone-plugins])
 AC_CONFIG_HEADERS([config.h])
 
+AC_CONFIG_AUX_DIR([build-aux])
 AM_INIT_AUTOMAKE
 AC_CONFIG_MACRO_DIR([m4])
 
@@ -21,6 +22,7 @@ dnl For target specific flags
 AM_PROG_CC_C_O
 AC_PROG_INSTALL
 AC_HEADER_STDC
+LT_PREREQ([2.2])
 LT_INIT
 
 MIGRATION_FLAGS="-DE_BOOK_DISABLE_DEPRECATED -DGDK_DISABLE_DEPRECATED -DGTK_DISABLE_DEPRECATED -DGTK_DISABLE_SINGLE_INCLUDES"
