--- a/daemon/src/video/test/Makefile.am
+++ b/daemon/src/video/test/Makefile.am
@@ -1,7 +1,7 @@
 include ../../../globals.mak
 
-TESTS=test_video_endpoint test_thread test_v4l2 test_shm
-check_PROGRAMS=test_video_endpoint test_video_rtp test_thread test_video_preview test_v4l2 test_shm
+TESTS=test_video_endpoint test_v4l2 test_shm
+check_PROGRAMS=test_video_endpoint test_video_rtp test_video_preview test_v4l2 test_shm
 
 test_video_endpoint_SOURCES=test_video_endpoint.cpp test_video_endpoint.h
 test_video_endpoint_LDADD=$(top_builddir)/src/libsflphone.la $(top_builddir)/src/video/libvideo.la $(YAML_LIBS)
@@ -11,9 +11,6 @@ test_video_rtp_LDADD=$(top_builddir)/src/libsflphone.la $(top_builddir)/src/vide
 
 test_video_preview_SOURCES=test_video_preview.cpp test_video_preview.h
 test_video_preview_LDADD=$(top_builddir)/src/libsflphone.la $(top_builddir)/src/video/libvideo.la $(YAML_LIBS)
-
-test_thread_SOURCES=test_thread.cpp
-test_thread_LDADD=@CCRTP_LIBS@
 
 test_v4l2_SOURCES=test_v4l2.cpp $(top_srcdir)/src/logger.cpp
 test_v4l2_LDADD=$(top_builddir)/src/libsflphone.la $(top_builddir)/src/video/libvideo.la $(YAML_LIBS)
