--- a/tools/build-system/launchpad/sflphone-client-kde/debian/control
+++ b/tools/build-system/launchpad/sflphone-client-kde/debian/control
@@ -7,5 +7,5 @@ Homepage: http://www.sfphone.org/
 
 Package: sflphone-client-kde
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, libqt4-dbus, kdelibs5, kdepimlibs5, sflphone-common
+Depends: ${shlibs:Depends}, ${misc:Depends}, libqt4-dbus, sflphone-common
 Description:KDE client for the sflphone-daemon SIP/IAX softphone
