--- a/daemon/src/video/Makefile.am
+++ b/daemon/src/video/Makefile.am
@@ -10,7 +10,7 @@ libvideo_la_SOURCES = libav_utils.cpp libav_utils.h video_rtp_session.cpp \
                       video_v4l2_list.cpp video_v4l2.h video_v4l2_list.h \
                       video_preferences.h video_preferences.cpp \
                       packet_handle.h packet_handle.cpp check.h shm_header.h \
-                      shm_sink.cpp shm_sink.h video_provider.h
+                      shm_sink.cpp shm_sink.h video_provider.cpp video_provider.h
 
 libvideo_la_LIBADD = @LIBAVCODEC_LIBS@ @LIBAVFORMAT_LIBS@ @LIBAVDEVICE_LIBS@ @LIBSWSCALE_LIBS@ @LIBAVUTIL_LIBS@ @CCRTP_LIBS@ @UDEV_LIBS@
 
