--- a/tools/build-system/launchpad/dput.conf
+++ b/tools/build-system/launchpad/dput.conf
@@ -26,6 +26,13 @@ incoming = ~savoirfairelinux/ubuntu/quantal
 login = anonymous
 allow_unsigned_uploads = 0
 
+[sflphone-raring]
+fqdn = ppa.launchpad.net
+method = ftp
+incoming = ~savoirfairelinux/ubuntu/raring
+login = anonymous
+allow_unsigned_uploads = 0
+
 [sflphone-nightly-natty]
 fqdn = ppa.launchpad.net
 method = ftp
@@ -44,6 +51,13 @@ allow_unsigned_uploads = 0
 fqdn = ppa.launchpad.net
 method = ftp
 incoming = ~savoirfairelinux/sflphone-nightly/ubuntu/precise
+login = anonymous
+allow_unsigned_uploads = 0
+
+[sflphone-nightly-raring]
+fqdn = ppa.launchpad.net
+method = ftp
+incoming = ~savoirfairelinux/sflphone-nightly/ubuntu/raring
 login = anonymous
 allow_unsigned_uploads = 0
 
