--- a/tools/build-system/launchpad/sflphone-client-gnome-video/debian/rules
+++ b/tools/build-system/launchpad/sflphone-client-gnome-video/debian/rules
@@ -93,7 +93,7 @@ binary-common:
 #	dh_installinit
 #	dh_installcron
 #	dh_installinfo
-	dh_installman
+#	dh_installman
 	dh_link
 	dh_strip
 	dh_compress
