* #18940: build-system: add x11 to build deps for kde
Signed-off-by: Tristan Matthews <tristan.matthews@savoirfairelinux.com>

--- a/tools/build-system/launchpad/sflphone-client-kde/debian/control
+++ b/tools/build-system/launchpad/sflphone-client-kde/debian/control
@@ -2,7 +2,7 @@ Source: sflphone-client-kde
 Section: kde
 Priority: optional
 Maintainer: Emmanuel Milou <emmanuel.milou@savoirfairelinux.com>
-Build-Depends: debhelper (>= 5.0), cdbs, kdelibs5-dev, cmake, kdepimlibs5-dev, libboost-dev,
+Build-Depends: debhelper (>= 5.0), cdbs, kdelibs5-dev, cmake, kdepimlibs5-dev, libboost-dev, libx11-dev,
 Homepage: http://www.sfphone.org/
 
 Package: sflphone-client-kde
